--- a/jsconfig.json
+++ b/jsconfig.json
@@ -4,6 +4,7 @@
     "paths": {
       "@/*": ["src/*"],
       "assets/*": ["src/assets/*"],
+      "api/*": ["src/api/*"],
       "components/*": ["src/components/*"],
       "contexts/*": ["src/contexts/*"],
       "hooks/*": ["src/hooks/*"],
